refactor(video): Add video settings interface

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -312,6 +312,7 @@ set(${PROJECT_NAME}_SOURCES
   src/video/genericnetcamview.h
   src/video/groupnetcamview.cpp
   src/video/groupnetcamview.h
+  src/video/ivideosettings.h
   src/video/netcamview.cpp
   src/video/netcamview.h
   src/video/videoframe.cpp
