feat(ui): Audio capture mode selection in av form
Adds a selection of audio capture mode (continuous/voice activation/push to
talk) in audio/video settings and an ability to set a push to talk hotkey.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -406,6 +406,8 @@ set(${PROJECT_NAME}_SOURCES
   src/widget/form/settings/generalform.h
   src/widget/form/settings/genericsettings.cpp
   src/widget/form/settings/genericsettings.h
+  src/widget/form/settings/hotkeyinput.cpp
+  src/widget/form/settings/hotkeyinput.h
   src/widget/form/settings/privacyform.cpp
   src/widget/form/settings/privacyform.h
   src/widget/form/settings/userinterfaceform.h
