--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -341,6 +341,8 @@ set(${PROJECT_NAME}_SOURCES
   src/widget/emoticonswidget.h
   src/widget/flowlayout.cpp
   src/widget/flowlayout.h
+  src/widget/searchform.cpp
+  src/widget/searchform.h
   src/widget/form/addfriendform.cpp
   src/widget/form/addfriendform.h
   src/widget/form/chatform.cpp
