chore(travis): Add package building in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -173,6 +173,14 @@ deploy:
     on:
       tags: true
     skip_cleanup: true
+  - provider: releases
+    skip_cleanup: true
+    script: .travis/upload_package.sh nightly
+  - provider: releases
+    skip_cleanup: true
+    script: .travis/upload_package.sh
+    on:
+      tags: true
 
 
 after_success:
