--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ branches:
   only:
     - master
     - /^v(\d+\.){2}\d+$/
+    - winDeploy # remove after testing
 
 matrix:
   fast_finish: true
@@ -120,6 +121,30 @@ deploy:
       condition: $TRAVIS_OS_NAME == osx
       repo: qTox/qTox
       tags: true
+    skip_cleanup: true
+
+  # Windows Installer 64Bit
+  - provider: releases
+    api_key:
+      secure: "BRbzTWRvadALRQSTihMKruOj64ydxusMUS9FQR//qFlS345ZYfYta43W//4LcWWDKtj6IvA6DRqNdabgWnpbpxpnm9gVftGUdOKlU3niPZhwsMkB2M12QHUnAP6DVOfGPvdciBV+6mu73SSxniEcrYjZ1CrRX7mknmehPpVKxNk="
+    file: "/workspace/x86_64/qtox/release/setup-qtox-x86_64-release.exe"
+    on:
+      condition: $WINDOWS_BUILD_ARCH_CACHE_TRICK_VARIABLE == x86_64 && -f /home/travis/build/qTox/qTox/stage3 && -f /home/travis/build/qTox/qTox/release
+      repo: qTox/qTox
+      #tags: true # uncomment after testing
+      branch: winDeploy # remove after testing
+    skip_cleanup: true
+
+  # Windows Installer 32Bit
+  - provider: releases
+    api_key:
+      secure: "BRbzTWRvadALRQSTihMKruOj64ydxusMUS9FQR//qFlS345ZYfYta43W//4LcWWDKtj6IvA6DRqNdabgWnpbpxpnm9gVftGUdOKlU3niPZhwsMkB2M12QHUnAP6DVOfGPvdciBV+6mu73SSxniEcrYjZ1CrRX7mknmehPpVKxNk="
+    file: "/workspace/x86_64/qtox/release/setup-qtox-i686-release.exe"
+    on:
+      condition: $WINDOWS_BUILD_ARCH_CACHE_TRICK_VARIABLE == i686 && -f /home/travis/build/qTox/qTox/stage3 && -f /home/travis/build/qTox/qTox/release
+      repo: qTox/qTox
+      #tags: true # uncomment after testing
+      branch: winDeploy # remove after testing
     skip_cleanup: true
 
   # branch for windows jenkins build
