--- a/.travis.yml
+++ b/.travis.yml
@@ -122,6 +122,28 @@ deploy:
       tags: true
     skip_cleanup: true
 
+  # Windows Installer 64Bit
+  - provider: releases
+    api_key:
+      secure: "BRbzTWRvadALRQSTihMKruOj64ydxusMUS9FQR//qFlS345ZYfYta43W//4LcWWDKtj6IvA6DRqNdabgWnpbpxpnm9gVftGUdOKlU3niPZhwsMkB2M12QHUnAP6DVOfGPvdciBV+6mu73SSxniEcrYjZ1CrRX7mknmehPpVKxNk="
+    file: "/opt/build-windows/x86_64/qtox/release/setup-qtox-x86_64.exe"
+    on:
+      condition: $WINDOWS_BUILD_ARCH_CACHE_TRICK_VARIABLE == x86_64 && -f stage3
+      repo: qTox/qTox
+      tags: true
+    skip_cleanup: true
+
+  # Windows Installer 32Bit
+  - provider: releases
+    api_key:
+      secure: "BRbzTWRvadALRQSTihMKruOj64ydxusMUS9FQR//qFlS345ZYfYta43W//4LcWWDKtj6IvA6DRqNdabgWnpbpxpnm9gVftGUdOKlU3niPZhwsMkB2M12QHUnAP6DVOfGPvdciBV+6mu73SSxniEcrYjZ1CrRX7mknmehPpVKxNk="
+    file: "/opt/build-windows/x86_64/qtox/release/setup-qtox-i686.exe"
+    on:
+      condition: $WINDOWS_BUILD_ARCH_CACHE_TRICK_VARIABLE == i686 && -f stage3
+      repo: qTox/qTox
+      tags: true
+    skip_cleanup: true
+
   # branch for windows jenkins build
   - provider: script
     script: .travis/deploy-jenkins-branch.sh
