--- a/.travis.yml
+++ b/.travis.yml
@@ -103,10 +103,15 @@ matrix:
       cache:
         directories:
           - /opt/build-windows/x86_64
-    - stage: macOS
+    - stage: "macOS and AppImage"
       os: osx
       osx_image: xcode7.3
       env: JOB=build-osx
+    - stage: "macOS and AppImage"
+      os: linux
+      script: ./appimage/build-appimage.sh
+      services:
+        - docker
 
 script: "./.travis/$JOB.sh"
 
