--- a/.travis.yml
+++ b/.travis.yml
@@ -109,6 +109,7 @@ matrix:
       env: JOB=build-osx
     - stage: "macOS and AppImage"
       os: linux
+      env: JOB=APPIMAGE
       script: ./appimage/build-appimage.sh
       services:
         - docker
@@ -116,6 +117,17 @@ matrix:
 script: "./.travis/$JOB.sh"
 
 deploy:
+  # Linux AppImage
+  - provider: releases
+    api_key:
+      secure: "BRbzTWRvadALRQSTihMKruOj64ydxusMUS9FQR//qFlS345ZYfYta43W//4LcWWDKtj6IvA6DRqNdabgWnpbpxpnm9gVftGUdOKlU3niPZhwsMkB2M12QHUnAP6DVOfGPvdciBV+6mu73SSxniEcrYjZ1CrRX7mknmehPpVKxNk="
+    file: ./output/qTox-"$TRAVIS_TAG".AppImage
+    on:
+      condition: $JOB == APPIMAGE
+      repo: qTox/qTox
+      tags: true
+    skip_cleanup: true
+
   # osx binary
   - provider: releases
     api_key:
