refactor(themes): load css and images from themes folder
The default theme is now placed in 'themes' folder in addition to being included
as a resource. That means:
- modifying css files doesn't require recompiling the program anymore
- users can now easily modify the existing theme
- whenever there is a style sheet or image file missing (for example deleted by user),
it will be loaded from the default theme that is included as a resource

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,6 +88,9 @@ include_directories(${CMAKE_SOURCE_DIR})
 
 include(Dependencies)
 
+# Copy themes
+file(COPY ${CMAKE_SOURCE_DIR}/themes DESTINATION ${CMAKE_BINARY_DIR})
+
 ################################################################################
 #
 # :: qTox main library sources
