feat: add spell check with QtSpell
Implements #1301
Adds spell check in chat.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,7 +85,7 @@ endif()
 # Search for headers in current directory.
 include_directories(${CMAKE_BINARY_DIR})
 include_directories(${CMAKE_SOURCE_DIR})
-
+include_directories(SYSTEM /usr/local/include/QtSpell-qt5)
 include(Dependencies)
 
 ################################################################################
