refactor(core): move logger to its own file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -255,6 +255,8 @@ set(${PROJECT_NAME}_SOURCES
   src/core/toxfile.h
   src/core/toxid.cpp
   src/core/toxid.h
+  src/core/toxlogger.cpp
+  src/core/toxlogger.h
   src/core/toxpk.cpp
   src/core/toxpk.h
   src/core/toxstring.cpp
