refactor(core): move Tox_Options handling to separate file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -257,6 +257,8 @@ set(${PROJECT_NAME}_SOURCES
   src/core/toxid.h
   src/core/toxlogger.cpp
   src/core/toxlogger.h
+  src/core/toxoptions.cpp
+  src/core/toxoptions.h
   src/core/toxpk.cpp
   src/core/toxpk.h
   src/core/toxstring.cpp
