--- a/.travis.yml
+++ b/.travis.yml
@@ -135,6 +135,18 @@ deploy:
       tags: true
     skip_cleanup: true
 
+  # Linux Flatpak
+  - provider: releases
+    api_key:
+      secure: "BRbzTWRvadALRQSTihMKruOj64ydxusMUS9FQR//qFlS345ZYfYta43W//4LcWWDKtj6IvA6DRqNdabgWnpbpxpnm9gVftGUdOKlU3niPZhwsMkB2M12QHUnAP6DVOfGPvdciBV+6mu73SSxniEcrYjZ1CrRX7mknmehPpVKxNk="
+    file_glob: true
+    file: ./output/*
+    on:
+      condition: $JOB == FLATPAK
+      repo: qTox/qTox
+      tags: true
+    skip_cleanup: true
+
   # osx binary
   - provider: releases
     api_key:
