feat(notify): add desktop notifications using snorenotify
This commit adds very basic support for desktop notifications on friend
request, group invites, friend messages and group messages.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ option(USE_CCACHE "Use ccache when available" ON)
 option(SPELL_CHECK "Enable spell cheching support" ON)
 option(SVGZ_ICON "Compress the SVG icon of qTox" ON)
 option(ASAN "Compile with AddressSanitizer" OFF)
+option(DESKTOP_NOTIFICATIONS "Use snorenotify for desktop notifications" OFF)
 
 # process generated files if cmake >= 3.10
 if(POLICY CMP0071)
@@ -648,6 +649,17 @@ if(${UPDATE_CHECK})
     message(STATUS "using update check")
 else()
     message(STATUS "NOT using update check")
+endif()
+
+if (${DESKTOP_NOTIFICATIONS})
+    add_definitions(-DDESKTOP_NOTIFICATIONS=1)
+    set(${PROJECT_NAME}_SOURCES ${${PROJECT_NAME}_SOURCES}
+        src/platform/desktop_notifications/desktopnotify.cpp
+        src/platform/desktop_notifications/desktopnotify.h)
+    message(STATUS "using desktop notifications")
+else()
+    add_definitions(-DDESKTOP_NOTIFICATIONS=0)
+    message(STATUS "not using desktop notifications")
 endif()
 
 if (MINGW)
