--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ option(USE_FILTERAUDIO "Enable the echo canceling backend" ON)
 option(AUTOUPDATE "Enable the auto updater" OFF)
 option(USE_CCACHE "Use ccache when available" ON)
 option(SPELL_CHECK "Enable spell cheching support" ON)
+option(DESKTOP_NOTIFICATIONS "Use snorenotify for desktop notifications" OFF)
 
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Debug)
@@ -594,6 +595,17 @@ if(${AUTOUPDATE} AND (WIN32 OR APPLE))
         src/net/autoupdate.cpp
         src/net/autoupdate.h)
     message(STATUS "using autoupdater")
+endif()
+
+if (${DESKTOP_NOTIFICATIONS})
+    add_definitions(-DDESKTOP_NOTIFICATIONS=1)
+    set(${PROJECT_NAME}_SOURCES ${${PROJECT_NAME}_SOURCES}
+        src/platform/desktop_notifications/desktopnotify.cpp
+        src/platform/desktop_notifications/desktopnotify.h)
+    message(STATUS "using desktop notifications")
+else()
+    add_definitions(-DDESKTOP_NOTIFICATIONS=0)
+    message(STATUS "not using desktop notifications")
 endif()
 
 if (MINGW)
