--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -211,6 +211,10 @@ execute_process(COMMAND ${CMAKE_COMMAND} -E copy_if_different
 set(${PROJECT_NAME}_SOURCES
   src/audio/audio.cpp
   src/audio/audio.h
+  src/audio/audiosink.h
+  src/audio/audiosink.cpp
+  src/audio/audiosource.h
+  src/audio/audiosource.cpp
   src/audio/backend/openal.cpp
   src/audio/backend/openal.h
   src/audio/iaudiosettings.h
