refactor(settings): move proxy settings into their own interface
Proxy settings are needed by more modules than core, so make them their
own interface.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -258,6 +258,7 @@ set(${PROJECT_NAME}_SOURCES
   src/core/dhtserver.cpp
   src/core/dhtserver.h
   src/core/icoresettings.h
+  src/core/iproxysettings.h
   src/core/recursivesignalblocker.cpp
   src/core/recursivesignalblocker.h
   src/core/toxcall.cpp
