--- a/.travis.yml
+++ b/.travis.yml
@@ -163,6 +163,7 @@ deploy:
     api_key:
       secure: "BRbzTWRvadALRQSTihMKruOj64ydxusMUS9FQR//qFlS345ZYfYta43W//4LcWWDKtj6IvA6DRqNdabgWnpbpxpnm9gVftGUdOKlU3niPZhwsMkB2M12QHUnAP6DVOfGPvdciBV+6mu73SSxniEcrYjZ1CrRX7mknmehPpVKxNk="
     file: "./workspace/x86_64/qtox/release/setup-qtox-x86_64-release.exe"
+    file: "./workspace/x86_64/qtox/release/setup-qtox-x86_64-release.exe.sha256"
     on:
       condition: $WINDOWS_BUILD_ARCH_CACHE_TRICK_VARIABLE == x86_64 && -f /home/travis/build/qTox/qTox/stage3 && -f /home/travis/build/qTox/qTox/release
       repo: qTox/qTox
@@ -174,6 +175,7 @@ deploy:
     api_key:
       secure: "BRbzTWRvadALRQSTihMKruOj64ydxusMUS9FQR//qFlS345ZYfYta43W//4LcWWDKtj6IvA6DRqNdabgWnpbpxpnm9gVftGUdOKlU3niPZhwsMkB2M12QHUnAP6DVOfGPvdciBV+6mu73SSxniEcrYjZ1CrRX7mknmehPpVKxNk="
     file: "./workspace/i686/qtox/release/setup-qtox-i686-release.exe"
+    file: "./workspace/i686/qtox/release/setup-qtox-i686-release.exe.sha256"
     on:
       condition: $WINDOWS_BUILD_ARCH_CACHE_TRICK_VARIABLE == i686 && -f /home/travis/build/qTox/qTox/stage3 && -f /home/travis/build/qTox/qTox/release
       repo: qTox/qTox
