--- a/.travis.yml
+++ b/.travis.yml
@@ -152,6 +152,7 @@ deploy:
     api_key:
       secure: "BRbzTWRvadALRQSTihMKruOj64ydxusMUS9FQR//qFlS345ZYfYta43W//4LcWWDKtj6IvA6DRqNdabgWnpbpxpnm9gVftGUdOKlU3niPZhwsMkB2M12QHUnAP6DVOfGPvdciBV+6mu73SSxniEcrYjZ1CrRX7mknmehPpVKxNk="
     file: "./qTox.dmg"
+    file: "./qTox.dmg.sha256"
     on:
       condition: $TRAVIS_OS_NAME == osx
       repo: qTox/qTox
