--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,11 +24,11 @@ jobs:
       - run:
           name: Build stage 1
           command: |
-            ./.travis/build-windows.sh "$BUILD__" "$BTYPE__" ~/cache/"$BUILD__" stage1
+            ./.travis/build-windows.sh "$BUILD__" "$BTYPE__" "~/cache/${BUILD__}" stage1
       - run:
           name: Build stage 2
           command: |
-            ./.travis/build-windows.sh "$BUILD__" "$BTYPE__" ~/cache/"$BUILD__" stage2
+            ./.travis/build-windows.sh "$BUILD__" "$BTYPE__" "~/cache/${BUILD__}" stage2
             ls -al ~/cache
       - save_cache:
           key: dependency-cache
@@ -37,22 +37,22 @@ jobs:
       - run:
           name: Build stage 3
           command: |
-            ./.travis/build-windows.sh "$BUILD__" "$BTYPE__" ~/cache/"$BUILD__" stage3
+            ./.travis/build-windows.sh "$BUILD__" "$BTYPE__" "~/cache/${BUILD__}" stage3
       - run:
           name: Debug info
           command: |
             ls -al ~/
-            ls -al ~/qTox/workspace/"$BUILD__"/qtox/"$BTYPE__"/
-            ls -al ~/qTox/workspace/"$BUILD__"/qtox/"$BTYPE__"/qtox.exe
+            ls -al "{CIRCLE_WORKING_DIRECTORY}/workspace/${BUILD__}/qtox/${BTYPE__}/"
+            ls -al "{CIRCLE_WORKING_DIRECTORY}/workspace/${BUILD__}/qtox/${BTYPE__}/qtox.exe"
       - run:
           name: Zip artifacts
           command: |
-            cd ~/qTox/workspace/"$BUILD__"/qtox/"$BTYPE__"/
-            zip -r qtox_"$BUILD__"_"$BTYPE__".zip *
+            cd "{CIRCLE_WORKING_DIRECTORY}/workspace/${BUILD__}/qtox/${BTYPE__}/"
+            zip -r "qtox_${BUILD__}_${BTYPE__}.zip" *
       - store_artifacts:
-          path: ~/qTox/workspace/"$BUILD__"/qtox/"$BTYPE__"/qtox.exe
+          path: "${CIRCLE_WORKING_DIRECTORY}/workspace/${BUILD__}/qtox/${BTYPE__}/qtox.exe"
       - store_artifacts:
-          path: ~/qTox/workspace/"$BUILD__"/qtox/"$BTYPE__"/qtox_"$BUILD__"_"$BTYPE__".zip
+          path: "${CIRCLE_WORKING_DIRECTORY}/workspace/${BUILD__}/qtox/${BTYPE__}/qtox_${BUILD__}_${BTYPE__}.zip"
 workflows:
   version: 2
   build:
