refactor: rename palette colors

--- a/themes/dark/palette.ini
+++ b/themes/dark/palette.ini
@@ -2,12 +2,11 @@
 green="#6bc260"
 yellow="#cebf44"
 red="#c84e4e"
-black="#c3c3c3"
-darkGrey="#c3c3c3"
-mediumGrey="#d1d1d1"
-mediumGreyLight="#131212"
-lightGrey="#d1d1d1"
-white="#201f1f"
+mainText="#c3c3c3"
+nameActive="#c3c3c3"
+statusActive="#d1d1d1"
+groundExtra="#d1d1d1"
+groundBase="#201f1f"
 orange="#ff7700"
 themeDark="#1c1c1c"
 themeMediumDark="#2a2a2a"
