--- a/themes/default/palette.ini
+++ b/themes/default/palette.ini
@@ -2,12 +2,11 @@
 green="#6bc260"
 yellow="#cebf44"
 red="#c84e4e"
-black="#000000"
-darkGrey="#1c1c1c"
-mediumGrey="#414141"
-mediumGreyLight="#4e4e4e"
-lightGrey="#d1d1d1"
-white="#ffffff"
+mainText="#000000"
+nameActive="#1c1c1c"
+statusActive="#414141"
+groundExtra="#d1d1d1"
+groundBase="#ffffff"
 orange="#ff7700"
 themeDark="#1c1c1c"
 themeMediumDark="#2a2a2a"
