style: edit colors for transfer widget

--- a/themes/dark/palette.ini
+++ b/themes/dark/palette.ini
@@ -1,7 +1,8 @@
 [colors]
-green="#6bc260"
-yellow="#cebf44"
-red="#c84e4e"
+transferGood="#42783b"
+transferWait="#958931"
+transferBad="#963a3a"
+transferMiddle="#707070"
 mainText="#c3c3c3"
 nameActive="#c3c3c3"
 statusActive="#d1d1d1"
