--- a/themes/default/palette.ini
+++ b/themes/default/palette.ini
@@ -1,7 +1,8 @@
 [colors]
-green="#6bc260"
-yellow="#cebf44"
-red="#c84e4e"
+transferGood="#6bc260"
+transferWait="#cebf44"
+transferBad="#c84e4e"
+transferMiddle="#d1d1d1"
 mainText="#000000"
 nameActive="#1c1c1c"
 statusActive="#414141"
